# codeql-extractor-iac

./: .all-contributorsrc  .codeqlmanifest.json  .gitignore  .gitmodules  .release.yml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  action.yml  codeql-extractor.yml  rust-toolchain.toml
.github/: CODEOWNERS  dependabot.yml  labeler.yml
.github/ISSUE_TEMPLATE/: bug.yml  false-negative.yml  false-positive.yml  request-technology.yml
.github/action/: package-lock.json  package.json  tsconfig.json
.github/action/src/: codeql.ts  index.ts
.github/scripts/: codeql.py  ql-build.sh  ql-scan.sh
.github/workflows/: build.yml  copilot-setup-steps.yml  coverage.yml  dependency-review.yml  labeler.yml  publish.yml  ql-for-ql.yml  release.yml  version.yml
bicep/: .codeqlmanifest.json  .gitignore  codeql-extractor.code-workspace  codeql-extractor.yml
bicep/downgrades/: qlpack.yml
bicep/extractor/: Cargo.toml
bicep/extractor/src/: autobuilder.rs  extractor.rs  generator.rs
bicep/ql/lib/: bicep.dbscheme  bicep.dbscheme.stats  bicep.qll  codeql-pack.lock.yml  qlpack.yml
bicep/ql/lib/codeql/: IDEContextual.qll
bicep/ql/lib/ide-contextual-queries/: printAst.ql  printCfg.ql
bicep/ql/src/: qlpack.yml
bicep/ql/src/codeql-suites/: code-scanning.qls
bicep/ql/src/diagnostics/: ExtractionErrors.ql  SuccessfullyExtractedFiles.ql
bicep/ql/test/: TestUtils.qll  qlpack.yml
bicep/scripts/: create-extractor-pack.sh  run-tests.sh
bicep/tools/: autobuild.cmd  autobuild.sh  index-files.cmd  index-files.sh  pre-finalize.sh  qltest.cmd  qltest.sh
docs/: Q&A.md  coverage.md  languages-and-frameworks.md  workflows.md
extractor/: Cargo.toml  README.md
extractor/src/: autobuilder.rs  extractor.rs  generator.rs
ql/lib/: bicep.qll  codeql-pack.lock.yml  hcl.qll  iac.dbscheme  iac.qll  qlpack.yml
ql/lib/codeql/bicep/: AST.qll  Cfg.qll
ql/lib/codeql/hcl/: AST.qll  Attributes.qll  Constants.qll  Locals.qll  Providers.qll  Resources.qll  Security.qll  Terraform.qll
ql/lib/codeql/iac/: AST.qll  Dependencies.qll  YAML.qll
ql/lib/ide-contextual-queries/: printAst.ql  printCfg.ql
ql/lib/test/TestUtilities/: InlineExpectationsTest.qll
ql/src/: codeql-pack.lock.yml  qlpack.yml  queries.xml
ql/src/Security/ARM/: AllowSSH.ql
ql/src/Security/Compose/: PinnedMajorVersion.ql
ql/src/Security/Containers/: LatestImages.ql  UserNotSet.ql
ql/src/Security/HelmCharts/: OldApiVersion.ql
ql/src/Security/OpenApi/: HttpAllowed.ql
ql/src/Security/Terraform/: HardcodedPasswords.ql
ql/src/codeql-suites/: iac-code-scanning.qls
ql/src/diagnostics/: Dependencies.ql  ExtractionErrors.ql  SuccessfullyExtractedFiles.ql
ql/src/security/ARM/: AllowSSH.ql
ql/src/security/Compose/: PinnedMajorVersion.ql
ql/src/security/Containers/: LatestImages.ql  (+1 more)
ql/test/: codeql-pack.lock.yml  qlpack.yml
scripts/: README.md  create-coverage.py  create-coverage.sh  create-extractor-pack.ps1  create-extractor-pack.sh  install-extractor.ps1  install-extractor.sh  publish-extractor-pack.sh  run-tests.ps1  run-tests.sh
scripts/rules/: config.yml  storage-publicly-accessible.yml  storage-unencrypted.yml  storage-versioning-disabled.yml
scripts/rules/compute/: compute-unencrypted.yml
scripts/rules/database/: database-tls-disabled.yml  database-unencrypted.yml  database-weak-encryption.yml
scripts/rules/kubernetes/: kubernetes-privileged-pod.yml
scripts/rules/storage/: storage-logging-disabled.yml  storage-publicly-accessible.yml  storage-tls-disabled.yml  storage-unencrypted.yml
scripts/rules/vault/: vault-weak-key.yml  weak-vault-key.yml
tools/: autobuild.cmd  autobuild.sh  index-files.cmd  index-files.sh  pre-finalize.cmd  pre-finalize.sh  qltest.cmd  qltest.sh
(+452 files in other folders)
