[package]
name = "codeql-extractor-iac"
version = "0.4.1"
authors = ["GitHub"]

edition = "2024"
rust-version = "1.85"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# TreeSitter Grammars
tree-sitter = "^0.24"

tree-sitter-hcl = { path = "./tree-sitter-hcl" }
# tree-sitter-hcl = { git = "https://github.com/GeekMasher/tree-sitter-hcl", rev = "5e045dd1ff7852511c249c4c5d919d9556751d98" }
tree-sitter-dockerfile = { path = "./tree-sitter-dockerfile" }
# tree-sitter-dockerfile = { git = "https://github.com/GeekMasher/tree-sitter-dockerfile", rev = "439c3e7b8a9bfdbf1f7d7c2beaae4173dc484cbf" }

# CodeQL - v2.20.4
codeql-extractor = { git = "https://github.com/github/codeql", rev = "c524a98eb91c769cb2994b8373181c2ebd27c20f" }

flate2 = "1.1"
clap = { version = "4.5", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
rayon = "1.10"
regex = "1.11"
